[package]
name = "exeSystemProcessor"
version = "1.1.0"
authors = ["simon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psutil = "*"
amqp = "*"
clap = "*"
simple_logger = "1.6.0"
log = "0.4"
serde = "*"
serde_json = "*"
serde_derive = "*"
cargo-tarpaulin = "0.11.1"
chrono = "0.4.11"

[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.4"
glob = "0.3.0"
