[package]
name = "exeSystemProcessor"
version = "2.0.1"
authors = ["simon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psutil = "*"
amqp = "*"
clap = "*"
simple_logger = "1.6.0"
log = "0.4"
serde = "*"
serde_json = "*"
serde_derive = "*"
chrono = "0.4.11"
system_shutdown = "3.0.0"
glob = "0.3.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"

